[gd_scene load_steps=4 format=3 uid="uid://b08mcdnehwyn"]

[ext_resource type="Script" path="res://scripts/paint_explosions_power_up.gd" id="1_h3q4o"]
[ext_resource type="Texture2D" uid="uid://jwai767asxnr" path="res://assets/environment/Paintball.png" id="2_kfvx3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1k8i5"]
radius = 248.453

[node name="Paint Explosions Power Up" type="Area2D" groups=["safe damage"]]
modulate = Color(0.835294, 0, 1, 1)
position = Vector2(-2, -3)
scale = Vector2(0.75, 0.75)
script = ExtResource("1_h3q4o")
paint_colors = Array[Color]([Color(0, 0.676216, 0.764561, 1), Color(0.994566, 0.368995, 6.68055e-05, 1), Color(0.900967, 0.00103423, 0.954913, 1), Color(0, 0.821409, 0.151496, 1), Color(1, 1, 0, 1), Color(0.915856, 0.238494, 0, 1), Color(0.505674, 0.000684997, 0.609357, 1)])

[node name="Paintball" type="Sprite2D" parent="."]
texture = ExtResource("2_kfvx3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1k8i5")

[node name="Power Up Time" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Power Up Time" to="." method="_on_power_up_time_timeout"]
